--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="package_id">Package ID</string>
     <string name="delivered">Delivered</string>
     <string name="save_details">Save Details</string>
+    <string name="search_hint">Search Packages</string>
 </resources>
