--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,13 @@
     <string name="package_name">Package Name</string>
     <string name="package_id">Package ID</string>
     <string name="delivered">Delivered</string>
+    <string name="not_delivered">Pending Delivery</string>
     <string name="save_details">Save Details</string>
     <string name="search_hint">Search Packages</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="editPackage">Edit Package</string>
+    <string name="package_provider">Package Provider</string>
+    <string name="delivery_status">Delivery Status</string>
 </resources>
